Webrender "blocked by env: Monitor refresh rate too high"
Categories
(Core :: Graphics: WebRender, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox76 | --- | unaffected |
| firefox77 | + | verified |
| firefox78 | --- | verified |
People
(Reporter: come, Assigned: aosmond)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
|
40.10 KB,
application/x-javascript
|
Details | |
|
47 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-release+
|
Details | Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:77.0) Gecko/20100101 Firefox/77.0
Steps to reproduce:
I use two 24" 4K screens with a nVidia GeForce 1030 GT.
Before Firefox 77 WebRender was working well and is fast. With Firefox 77 WebRender is incorrectly blacklisted and Direct3D 11 is used and Firefox is sluggish.
Actual results:
WebRender is blacklisted since Firefox 77 for obscure reason : "blocked by env: Monitor refresh rate too high".
The monitors are both 60 Hz.
Expected results:
WebRender should be enable by default in this setup, as it has been since Firefox 68.
Comment 1•5 years ago
•
|
||
"message": "Monitor refresh rate too high"
"DisplayCount": 2,
"Display0": "3840x2160@60Hz ",
"Display1": "3840x2160@60Hz "
| Assignee | ||
Comment 2•5 years ago
|
||
Oh my. I landed >=, when I very much intended >. I probably changed that for testing :|.
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 3•5 years ago
|
||
Updated•5 years ago
|
| Assignee | ||
Comment 4•5 years ago
|
||
| Assignee | ||
Updated•5 years ago
|
Updated•5 years ago
|
Comment 5•5 years ago
|
||
This regression only affects non-Nightly as Nightly must test WebRender even with high refresh rates.
The patch was uplifted 2020-05-24. (Latest) Beta Telemetry from 2020-05-25 doesn't show the decline yet: https://sql.telemetry.mozilla.org/public/dashboards/Zo3A3uEtmUIEyhA5hRpSHPFtNXJ0BzPxtTKPUxSJ (gfxCompositor beta)
Updated•5 years ago
|
| Assignee | ||
Comment 7•5 years ago
|
||
Comment on attachment 9152369 [details]
Bug 1641510 - Ensure we allow WebRender on beta/release for 60 Hz monitors.
Beta/Release Uplift Approval Request
- User impact if declined: Users with 60 Hz monitors (82% of pop) won't get WebRender.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: On Windows -- with a 60 Hz monitor, ensure you still get WebRender, with > 60 Hz monitor, ensure you don't get WebRender.
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The change is trivially understood. We added more tests for the edge cases we broke before.
- String changes made/needed:
| Assignee | ||
Updated•5 years ago
|
Comment 8•5 years ago
|
||
Comment on attachment 9152369 [details]
Bug 1641510 - Ensure we allow WebRender on beta/release for 60 Hz monitors.
Driver for RC3
Comment 9•5 years ago
|
||
| bugherder uplift | ||
Comment 10•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
Comment 11•5 years ago
|
||
Reproduced the initial issue using a monitor with 60hz and a dual monitor setup (60hz max | 240hz max) and Firefox 77.0 rc1, verified that using a Firefox 77.0 rc3 webrender is not blocked anymore by Monitor refresh rate too high when using a single monitor with 60hz or two with 60hz, but it is blocked if using 144hz or higher in a single setup or in a dual setup with 60hz | 144hz (or higher).
Leaving the bug opened to verify on 78 beta (since nightly is not affected by this) once it launches.
Comment 12•5 years ago
|
||
Also verified on Firefox 78.0b1 with the same setup as above.
Description
•