Bug 1641510 - Ensure we allow WebRender on beta/release for 60 Hz monitors. r=jrmuizel a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D77234